# anyn2n

./: .gitignore  LICENSE  README.md  build-edge.sh  build-portable.ps1  copy-binaries.sh  package.json  run-admin.bat
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build-portable.ps1  build-with-manifest.ps1  tauri.conf.json
src-tauri/binaries/: edge-aarch64-apple-darwin  edge-x86_64-unknown-linux-gnu
src-tauri/resources/: app.rc
src-tauri/src/: embedded.rs  lib.rs  main.rs  manager.rs  servers.rs  tap_installer.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/n2n/: discovery.rs  edge_process.rs  management.rs  mod.rs
src/components/: logs-window.tsx  peers-window.tsx  server-form.tsx  servers-window.tsx  settings-window.tsx
src/lib/: n2n-api.ts
